# urbanopt-ditto-reader

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE.md  MANIFEST.in  README.md  config.json  convert.py  ditto_reader_cli.py  pyproject.toml  read.py  requirements.txt  setup.py  uo_cli.py  update_licenses.py  urbanopt_ditto_reader.py
.github/workflows/: ci.yml  pypi_release.yml  release.yml
example/: config.json  example_config.json  example_project_with_electric_network.json  extended_catalog.json  urbanopt_example.json
example/baseline_scenario/baseline_scenario/: default_scenario_report.json  scenario_report_reopt_local_optimization.csv  scenario_report_reopt_local_optimization.json
example/baseline_scenario/baseline_scenario/1/: data_point_out.json  eplusout.audit  eplusout.bnd  eplusout.eio  eplusout.end  eplusout.rdd  eplusout.shd  feature_report_1_reopt_run.json  in.idf  pre-preprocess.idf
example/baseline_scenario/baseline_scenario/10/: eplusout.audit  eplusout.bnd  eplusout.end  epluszsz.csv  in.idf  in.osm  in.osw  stdout-energyplus
example/baseline_scenario/baseline_scenario/11/: data_point_out.json  eplusout.audit  eplusout.bnd  eplusout.eio  eplusout.err  eplusout.mtd  eplusout.rdd  epluszsz.csv  feature_report_11_reopt_run.json  in.osw  started.job  stdout-energyplus
example/baseline_scenario/baseline_scenario/12/: eplusout.audit  eplusout.bnd  eplusout.end  eplusout.err  eplusout.mtd  eplusout.rdd  eplusssz.csv  epluszsz.csv  feature_report_12_reopt_run.json  in.idf  in.osm  in.osw  measure_attributes.json  pre-preprocess.idf  started.job
example/baseline_scenario/baseline_scenario/13/: eplusout.audit  eplusout.end  eplusout.rdd  in.idf  in.osw  measure_attributes.json  out.osw  started.job
example/baseline_scenario/baseline_scenario/2/: eplusout.bnd  eplusout.eso  eplusout.shd  feature_report_2_reopt_run.json  in.osm
example/baseline_scenario/baseline_scenario/3/: eplusout.audit  eplusout.rdd  feature_report_3_reopt_run.json  in.idf  in.osw  out.osw  pre-preprocess.idf  stdout-energyplus
example/baseline_scenario/opendss/profiles/: pv_8.csv  (+11 more)
example/run/baseline_scenario/: default_scenario_report.csv  default_scenario_report.json  scenario_report_opendss.json  scenario_report_reopt_global_optimization.csv  scenario_report_reopt_global_optimization.json
reader/: read.py
tests/urbanopt_ditto_reader/: test_ditto_reader_cli.py
urbanopt_ditto_reader/: ditto_reader_cli.py  example_config.json  run.py  urbanopt_ditto_reader.py
urbanopt_ditto_reader/reader/: __init__.py  read.py
(+805 files in other folders)
